--- a/html/minicart_frame.html
+++ b/html/minicart_frame.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -7,34 +8,73 @@
     <title>购物车</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
     <style>
+        html,
+        body {
+            height: 100%;
+            background-color: transparent;
+        }
         .shop_car{
+            display: inline-block;
             background: url(../image/minicart.png) no-repeat right center;
-            width: 36px;
+            width: auto;
+            min-width:36px;
             height: 36px;
-            line-height:22px;
+            line-height:25px;
             background-size: auto 36px;
-            /* background-color: #ccc; */
-            /*background-position: right center;*/
             padding:4px;
             box-sizing: border-box;
+            display: inline-block;
         }
-        .shop_car span{
+        .shop_car span:not(:nth-of-type(3)){
             color: #fff;
             font-size: 12px;
+        }
+        .count {
+            display: inline;
+            box-sizing: border-box;
+            padding-left: 4px;
+            padding-right: 4px;
+            width: auto;
+            min-width: 25px;
+            height: 25px;
+            border-radius: 14px;
+            background-color: #fff;
+            text-align: center;
+            color: #e3007f;
+            font-size: 14px
         }
     </style>
 </head>
 <body>
   <div class="shop_car">
-      <span>&yen</span>
-      <span>0</span>
+      <span>&yen;</span>
+      <span class="price">0</span>
+      <span id="count" class="count"></span>
   </div>
 </body>
 <script type="text/javascript" src="../script/api.js"></script>
 <script src="../script/jquery-1.12.3.min.js"></script>
+<script type="text/javascript" src="../script/comen.js"></script>
 <script type="text/javascript">
-    apiready = function(){
+  apiready = function(){
+  
+    });
+    //监听整个页面的点击事件
+    api.addEventListener({
+        name:'tap'
+     }, function(ret, err){
+       api.openWin({
+           name: 'shoppingcart',
+           url: './shoppingcart.html',
+           pageParam: {
+               wareId: wareId_,
+               prices:prices,
+               count:count,
+           }
+       });
+    });
 
-    };
+  }
+
 </script>
 </html>
